api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  namespace: u-cptz2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api-container
        image: xinjie19/kubeapi:v5
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
