public-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-deploy
  namespace: u-cptz2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: public
  template:
    metadata:
      labels:
        app: public
    spec:
      containers:
      - name: public-container
        image: xinjie19/kubepub:v4
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
