api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: u-cptz2
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000  # Port sur lequel l'API écoute dans le conteneur
  type: ClusterIP
