servicedjango.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicedjango
  namespace: u-cptz2
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80        # Port sur lequel le service va écouter
      targetPort: 8000  # Le port où l'application Django écoute dans le pod
  type: ClusterIP
